--- a/src/service/ChessBuddies.csproj
+++ b/src/service/ChessBuddies.csproj
@@ -7,5 +7,6 @@
     <PackageReference Include="Discord.Net" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
+    <PackageReference Include="ChessDotNet" Version="0.9.5.5" />
   </ItemGroup>
 </Project>
