Added authorization functionality and 2 administration commands, !shutdown and !status.

--- a/src/service/appsettings.json
+++ b/src/service/appsettings.json
@@ -1,4 +1,5 @@
 {
-    "token": "mykey",
-    "confirmationsTimeout": 30000
+    "token": "mykey", //This is your Discord bot's token
+    "confirmationsTimeout": 30000, //Time in milliseconds before challenge/undo requests timeout.
+    "admins": "" //Discord users with admin privileges to bot, Example value is "UserName#5555,SomeOtherUser#1111"
 }
