Added database support with PostgreSQL.

--- a/src/service/appsettings.json
+++ b/src/service/appsettings.json
@@ -1,5 +1,7 @@
 {
     "token": "mykey", //This is your Discord bot's token
     "confirmationsTimeout": 30000, //Time in milliseconds before challenge/undo requests timeout.
-    "admins": "" //Discord users with admin privileges to bot, Example value is "UserName#5555,SomeOtherUser#1111"
+    "admins": "", //Discord users with admin privileges to bot, Example value is "UserName#5555,SomeOtherUser#1111"
+    //Use your own database username/password
+    "Db": "Server=localhost;Port=5432;Database=chessbuddies;User Id=chessbuddies;Password=HYgWbV6CcvgjHpnf;"
 }
